--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,24 +1,30 @@
-- name: build-deb-action
-  # You may pin to the exact commit or the version.
-  # uses: jiro4989/build-deb-action@d38d2efb9670d446ad836cc638d9fe871524af6b
-  uses: jiro4989/build-deb-action@v2
-  with:
-    # Package name of debian package.
-    package: 
-    # Directory of release files.
-    package_root: 
-    # Package maintainer name.
-    maintainer: 
-    # Package version.
-    version: 
-    # Package installed size. GitHub Actions set summarized byte size of `package_root` directory when this parameter is empty.
-    installed_size: # optional, default is 
-    # Package dependencies.
-    depends: # optional, default is none
-    # Package architecture.
-    arch: # optional, default is amd64
-    # Package description.
-    desc: # optional, default is no description
-    # Set the compression type used when building. Allowed types gzip, xz, zstd, none. Default is gzip.
+name: build
 
-    compress_type: # optional, default is gzip
+on:
+  push:
+    tags:
+      - 'v*.*.*'
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: create sample script
+        run: |
+          cp builds/Linux_x64/release/QTradingview2 > .debpkg/usr/bin/qtradingview2
+         
+          # create DEBIAN directory if you want to add other pre/post scripts
+          mkdir -p .debpkg/DEBIAN
+          echo -e "echo postinst" > .debpkg/DEBIAN/postinst
+          chmod +x .debpkg/DEBIAN/postinst
+      - uses: jiro4989/build-deb-action@v3
+        with:
+          package: qtradingview
+          package_root: .debpkg
+          maintainer: katmai1
+          version: ${{ github.ref }} # refs/tags/v*.*.*
+          arch: 'amd64'
+          depends: 'libc6 (>= 2.2.1)'
+          desc: 'this is sample package.'
