--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,31 +1,55 @@
-name: build
+---
+name: release
 
-on:
+"on":
   push:
     tags:
       - 'v*.*.*'
 
+env:
+  APP_NAME: 'qtradingview2'
+  MAINTAINER: 'katmai1'
+  DESC: 'Tradingview app'
+
 jobs:
-  build:
+  build-linux-packages:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: create sample script
         run: |
-          mkdir -p .debpkg/usr/bin/
+          mkdir -p .debpkg/usr/bin
+          mkdir -p .rpmpkg/usr/bin
           cp builds/Linux_x64/release/QTradingview2 .debpkg/usr/bin/qtradingview2
-         
-          # create DEBIAN directory if you want to add other pre/post scripts
-          mkdir -p .debpkg/DEBIAN
-          echo -e "echo postinst" > .debpkg/DEBIAN/postinst
-          chmod +x .debpkg/DEBIAN/postinst
+          cp builds/Linux_x64/release/QTradingview2 .rpmpkg/usr/bin/qtradingview2
       - uses: jiro4989/build-deb-action@v3
         with:
-          package: qtradingview
+          package: ${{ env.APP_NAME }}
           package_root: .debpkg
-          maintainer: katmai1
-          version: ${{ github.ref }} # refs/tags/v*.*.*
+          maintainer: ${{ env.MAINTAINER }}
+          version: ${{ github.ref }}
           arch: 'amd64'
-          depends: 'libc6 (>= 2.2.1)'
-          desc: 'this is sample package.'
+          desc: '${{ env.DESC }}'
+
+      - uses: jiro4989/build-rpm-action@v2
+        with:
+          summary: '${{ env.DESC }}'
+          package: ${{ env.APP_NAME }}
+          package_root: .rpmpkg
+          maintainer: ${{ env.MAINTAINER }}
+          version: ${{ github.ref }}
+          arch: 'x86_64'
+          desc: '${{ env.DESC }}'
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: artifact-deb
+          path: |
+            ./*.deb
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: artifact-rpm
+          path: |
+            ./*.rpm
+            !./*-debuginfo-*.rpm
