save list to favoritos.txt

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ Thumbs.db
 /builds/Linux_x64/profile/
 /builds/Linux_x64/release/moc_predefs.h
 /builds/Linux_x64/release/qmake_qmake_qm_files.qrc
+/builds/Linux_x64/release/favoritos.txt
