--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     env:
       BUILD_DIR: 'build'  # Especifica la carpeta de compilación
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Qt 6.3.1
-      uses: jurplel/install-qt-action@v1
+      uses: jurplel/install-qt-action@v3
       with:
         version: '6.3.1'
         
