--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -16,15 +16,15 @@ jobs:
     - name: Checkout the repository
       uses: actions/checkout@v2
 
-    - name: Install Qt 6.3.1
+    - name: Install Qt 6.2.1
       uses: jurplel/install-qt-action@v3
       with:
-        version: '6.3.1'
+        version: '6.2.*'
         
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libgl1-mesa-dev libxkbcommon-x11-0 libxkbcommon-x11-0-dbg libxi-dev libxcursor-dev libxcomposite-dev libxdamage-dev libxrandr-dev libxtst-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libasound2-dev libdbus-1-dev
+        sudo apt-get install -y build-essential libgl1-mesa-dev libxkbcommon-x11-0 libxi-dev libxcursor-dev libxcomposite-dev libxdamage-dev libxrandr-dev libxtst-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libasound2-dev libdbus-1-dev
 
     - name: Create build directory
       run: mkdir $BUILD_DIR
