--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Compile the application
       working-directory: build
-      run: qmake -makefile && make
+      run: qmake QTradingview2.pro && make
 
     - name: Install AppImage tools
       run: sudo apt-get install -y desktop-file-utils file
