--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -17,6 +17,7 @@ jobs:
       uses: jurplel/install-qt-action@v3
       with:
         version: '6.2.*'
+        modules: 'qtwebengine'
         
     - name: Install dependencies
       run: |
