--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         version: '6.2.*'
         modules: 'qtwebengine'
+        tools: 'tools_ifw tools_qtcreator,qt.tools.qtcreator'
         
     - name: Install dependencies
       run: |
