--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -38,6 +38,7 @@ jobs:
 
     - name: Create AppImage
       run: |
-        mkdir appdir
-        cp QTradingview2 appdir/  # Ajusta esta línea según la ubicación del archivo de salida después de compilar
-        ./linuxdeployqt appdir/QTradingview2 -appimage -no-plugins
+        mkdir -p appdir/usr/bin
+        cp QTradingview2 appdir/usr/bin/  # Ajusta esta línea según la ubicación del archivo de salida después de compilar
+        cp qtradingview2.desktop appdir/
+        ./linuxdeployqt appdir/QTradingview2 -appimage -no-plugins -verbose=2
