--- a/qtradingview2.desktop
+++ b/qtradingview2.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=QTradingview2
 Exec=/usr/bin/QTradingview2
-Icon=qtradingview2.png
+Icon=qtradingview2
 Type=Application
 Categories=Network;
