--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -42,4 +42,10 @@ jobs:
         cp QTradingview2 appdir/usr/bin/  # Ajusta esta línea según la ubicación del archivo de salida después de compilar
         cp qtradingview2.desktop appdir/
         cp icons/qtradingview2.png appdir/
-        ./linuxdeployqt appdir/usr/bin/QTradingview2 -appimage -no-plugins -verbose=2
+        ./linuxdeployqt appdir/usr/bin/QTradingview2 -appimage -no-plugins -verbose=1
+
+    - name: Upload AppImage to Releases
+      uses: softprops/action-gh-release@v1
+      with:
+        files: QTradingview2.AppImage
+        tag_name: ${{ github.ref }}  
