--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -44,8 +44,11 @@ jobs:
         cp icons/qtradingview2.png appdir/
         ./linuxdeployqt appdir/usr/bin/QTradingview2 -appimage -no-plugins -verbose=1
 
+    - name: Move the AppImage to an artifacts directory
+      run: mv QTradingview2*.AppImage artifacts/QTradingview2.AppImage
+    
     - name: Upload AppImage to Releases
       uses: softprops/action-gh-release@v1
       with:
-        files: QTradingview2*.AppImage
-        tag_name: v0.5.8  
+        files: artifacts/QTradingview2.AppImage
+        tag_name: ${{ env.GITHUB_REF_NAME }}
