--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -48,8 +48,8 @@ jobs:
       run: |
         mkdir artifacts
         mv QTradingview2*.AppImage artifacts/QTradingview2.AppImage
-    
-    uses: svenstaro/upload-release-action@v2
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: artifacts/QTradingview2.AppImage
