--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,29 +1,38 @@
 name: Build and Package for Debian
 on:
   push:
-    branches:
-      - main  # Cambia esto por el nombre de la rama donde quieres que se active el flujo de trabajo
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
     name: Build and Package
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install Qt 6.2.1
+      uses: jurplel/install-qt-action@v3
+      with:
+        version: '6.2.*'
+        modules: qtwebengine qtwebchannel qtpositioning
+        tools: 'tools_ifw tools_qtcreator,qt.tools.qtcreator'
+        
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y build-essential qt6-default qttools5-dev-tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential libgl1-mesa-dev libxkbcommon-x11-0 libxi-dev libxcursor-dev libxcomposite-dev libxdamage-dev libxrandr-dev libxtst-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libasound2-dev libdbus-1-dev
 
     - name: Build the application
       run: qmake && make
 
     - name: Package for Debian
-      run: fakeroot dpkg-deb --build path/to/your/application
+      run: fakeroot dpkg-deb --build QTradingview2
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: debian-package
-        path: path/to/your/application.deb
+        path: QTradingview2.deb
