--- a/control
+++ b/control
@@ -2,6 +2,6 @@ Package: QTradingview
 Version: 1.0
 Architecture: amd64 
 Maintainer: katmai1
-Depends: qt6-default, qttools5-dev-tools
+Depends:
 Description: Descripción de tu aplicación
 
