--- a/deploy/DEBIAN/control
+++ b/deploy/DEBIAN/control
@@ -2,6 +2,6 @@ Package: QTradingview
 Architecture: amd64 
 Maintainer: katmai1
 Version: 1.0.0
-Depends:
+Depends: debhelper
 Description: Descripción de tu aplicación
 
