--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -17,7 +17,7 @@ jobs:
       uses: jurplel/install-qt-action@v3
       with:
         version: '6.2.*'
-        modules: qtwebengine qtwebchannel qtpositioning
+        archives: qtwebengine qtwebchannel qtpositioning
         tools: 'tools_ifw tools_qtcreator,qt.tools.qtcreator'
         
     - name: Install dependencies
