--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -17,7 +17,7 @@ jobs:
       uses: jurplel/install-qt-action@v3
       with:
         version: '6.3.*'
-        modules: 'qtwebengine qtwebchannel qtpositioning qtqml'
+        modules: 'qtwebengine qtwebchannel qtpositioning qtqml qttools'
         tools: 'tools_ifw tools_qtcreator,qt.tools.qtcreator'
         archives: 'qtbase icu'
         
