--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
           path: qtradingview2_${{ github.ref_name }}_amd64.deb
      
       - name: Release
-        uses: softprops/action-gh-release@91409e712cf565ce9eff10c87a8d1b11b81757ae
+        uses: softprops/action-gh-release@v1
         with:
           files: qtradingview2_${{ github.ref_name }}_amd64.deb
     env:
