--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,7 +25,7 @@ jobs:
           target:       desktop
           arch:         gcc_64
           dir:          ${{ runner.temp }}
-          modules:      webenginewidgets
+          modules:      qtwebengine
           setup-python: false
     
     - name: Create build directory
