--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,6 +7,7 @@ on:
 env:
   SOURCE_DIR:   ${{ github.workspace }}
   QT_VERSION:   6.5.2
+  ARTIFACT:     QTradingview2.AppImage
   
 jobs:
   build:
@@ -36,3 +37,19 @@ jobs:
       run:  |
             qmake -r ${{ env.SOURCE_DIR }}/QTradingview2.pro
             make
+    
+    - name: AppImage
+      working-directory: ${{ env.SOURCE_DIR }}/buildd
+      run: |
+           wget -O deploy.AppImage https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
+           chmod +x deploy.AppImage
+           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${{ github.workspace }}/Qt/6.5.2/gcc_64/lib/
+           cp ${{ env.SOURCE_DIR }}/linux/* .
+           ./deploy.AppImage QTradingview2.desktop -appimage -no-translations -qmldir=${{ env.SOURCE_DIR }} -extra-plugins=renderers
+           mv *.AppImage ${{ env.ARTIFACT }} 
+    
+    - name: Linux artefact
+      uses: actions/upload-artifact@v1
+      with:
+           name: ${{ env.ARTIFACT }}
+           path: ${{ env.SOURCE_DIR }}/build/${{ env.ARTIFACT }}
