--- a/deploy/DEBIAN/control
+++ b/deploy/DEBIAN/control
@@ -1,6 +1,7 @@
 Package: QTradingview2
 Architecture: amd64 
 Maintainer: katmai1
+Version: 0.8.7
 Depends: debhelper
 Description: Descripción de tu aplicación
 
