--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,9 +21,11 @@ jobs:
 
     - name: create package
       run: |
+          mkdir .debpkg
+          cp ${{ env.DEB_DIR}}/* .debpkg/
           # echo "Version: 0.8.6" >> ${{ env.DEB_DIR }}/DEBIAN/control
-          cp ${{ env.BIN_FILE }} ${{ env.DEB_DIR }}/usr/bin/qtradingview2
-          dpkg-deb --build ${{ env.DEB_DIR }} qtradingview2.deb
+          cp ${{ env.BIN_FILE }} .debpkg/usr/bin/qtradingview2
+          dpkg-deb --build .debpkg qtradingview2.deb
 
     - name: Release
       uses: softprops/action-gh-release@v2
