--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,11 +21,22 @@ jobs:
 
     - name: create package
       run: |
-          mkdir .debpkg
-          cp -r ${{ env.DEB_DIR}}/* .debpkg/
-          # echo "Version: 0.8.6" >> ${{ env.DEB_DIR }}/DEBIAN/control
-          cp ${{ env.BIN_FILE }} .debpkg/usr/bin/
-          dpkg-deb --build .debpkg qtradingview2.deb
+        mkdir -p .debpkg/usr/bin
+        cp ${{ env.BIN_FILE }} .debpkg/usr/bin/
+          # mkdir .debpkg
+          # cp -r ${{ env.DEB_DIR}}/* .debpkg/
+          # # echo "Version: 0.8.6" >> ${{ env.DEB_DIR }}/DEBIAN/control
+          # dpkg-deb --build .debpkg qtradingview2.deb
+
+    - uses: jiro4989/build-deb-action@v3
+      with:
+        package: qtradingview2
+        package_root: .debpkg
+        maintainer: katmai1
+        version: ${{ github.ref }} # refs/tags/v*.*.*
+        arch: 'amd64'
+        depends: 'libc6 (>= 2.2.1), git'
+        desc: 'this is sample package.'
 
     - name: Release
       uses: softprops/action-gh-release@v2
