--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -33,12 +33,12 @@ jobs:
         package: qtradingview2
         package_root: .debpkg
         maintainer: katmai1
-        version: ${{ github.ref }} # refs/tags/v*.*.*
+        version: ${{ github.ref }}
         arch: 'amd64'
         depends: 'libc6 (>= 2.2.1), git'
         desc: 'this is sample package.'
 
     - name: Release
       uses: softprops/action-gh-release@v2
-      with:
-        files: qtradingview2.deb
+      # with:
+      #   files: .deb
