--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -24,10 +24,6 @@ jobs:
         mkdir -p .debpkg/usr/bin
         cp ${{ env.BIN_FILE }} .debpkg/usr/bin/
         cp -r ${{ env.DEB_DIR}}/usr/share .debpkg/usr/
-          # mkdir .debpkg
-          # cp -r ${{ env.DEB_DIR}}/* .debpkg/
-          # # echo "Version: 0.8.6" >> ${{ env.DEB_DIR }}/DEBIAN/control
-          # dpkg-deb --build .debpkg qtradingview2.deb
 
     - uses: jiro4989/build-deb-action@v3
       with:
@@ -36,8 +32,8 @@ jobs:
         maintainer: katmai1
         version: ${{ github.ref }}
         arch: 'amd64'
-        depends: 'libc6 (>= 2.2.1), git'
-        desc: 'this is sample package.'
+        depends: 'libc6 (>= 2.2.1)'
+        desc: ' QTradingview in C++ '
 
     - name: Release
       uses: softprops/action-gh-release@v2
