--- a/deploy/usr/share/applications/qtradingview2.desktop
+++ b/deploy/usr/share/applications/qtradingview2.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=QTradingview2
 Exec=/usr/bin/QTradingview2
-Icon=/usr/share/icons/hicolor/48x48/apps/qtradingview2
+Icon=/usr/share/icons/hicolor/48x48/apps/qtradingview2.png
 Type=Application
 Categories=Utility;
