--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -20,7 +20,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Update version
-      run: sed -i 's/1.0.0/${{ github.ref }}/g' version.h
+      run: |
+        version = $(echo "${{ github.ref }}" | cut -d 'v' -f 2)
+        sed -i 's/1.0.0/$version/g' version.h
         
     - name: create package
       run: |
