--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Update version
       run: |
         version = $(echo "${{ github.ref }}" | cut -d 'v' -f 2)
-        sed -i 's/1.0.0/$version/g' version.h
+        sed -i 's/1.0.0/${{version}}/g' version.h
         
     - name: create package
       run: |
