--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -21,8 +21,7 @@ jobs:
 
     - name: Update version
       run: |
-        echo "${{ github.ref }}" | cut -d 'v' -f 2 >> $version
-        sed -i 's/1.0.0/$version/g' version.h
+        sed -i 's/1.0.0/${{github.ref_number}}/g' version.h
         
     - name: create package
       run: |
