mv files to src folder

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ Thumbs.db
 /builds/Linux_x64/release/moc_predefs.h
 /builds/Linux_x64/release/qmake_qmake_qm_files.qrc
 /builds/Linux_x64/release/favoritos.txt
+.vscode/settings.json
+builds/Linux_x64/release/qmake_qmake_qm_files_rc.py
