--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ Thumbs.db
 builds/Linux_x64/release/qmake_qmake_qm_files_rc.py
 *.py
 builds/Linux_x64/release/QTradingview2
+builds/Linux_x64/release/QTradingview2
